ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OpportunityLineItemSchedule/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>IF( 
    ISPICKVAL(Schedule_Type__c, &apos;Divide Amount into multiple installments&apos;), 
    Revenue / OpportunityLineItem.UnitPrice, 
    OpportunityLineItem.Quantity
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>