ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OpportunityLineItemSchedule/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>This represent the Schedule Type selected during Establishing schedules on the Opportunity Line Item</description>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divide Amount into multiple installments</fullName>
            </value>
            <value>
                <fullName>Repeat Amount for Each Installment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>