ASC Prod BAckup/ASC Prod/force-app/main/default/objects/OpportunityLineItemSchedule/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>